remove spelling error in index.html file

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <section class="hero">
             <img src="./assets/landing.png" alt="dashboard">
             <h1>Invest in everything</h1>
-            <p>Online platform to invest in stocks, derivatives, mutula funds, and more</p>
+            <p>Online platform to invest in stocks, derivatives, mutual funds, and more</p>
             <a href="#" class="hero-btn">Sign up now</a>
         </section>
     </main>
